# thx

./: .gitignore  CMakeLists.txt  README  README.md  init-cmake-thx-vc10x64.sh  init-cmake-thx-vc10x86.sh  thx.ncb  thx.sln
cmake/: CMakeLists.txt  init-cmake-thx-vc10x64.sh
include/: CMakeLists.txt  Ny(tt) Textdokument.txt  include.vcxproj  include.vcxproj.filters  thx.hpp  thx_arithmetic_type.hpp  thx_color_space.hpp  thx_define.hpp  thx_hashing.hpp  thx_io.hpp  thx_mat.hpp  thx_mat_algo.hpp  thx_mat_operators.hpp  thx_mat_transform.hpp  thx_mat_utils.hpp  thx_namespace.hpp  thx_operators.hpp  thx_pixel.hpp  thx_quat.hpp  thx_quat_algo.hpp  thx_quat_operators.hpp  thx_quat_utils.hpp  thx_scalar_algo.hpp  thx_scalar_traits.hpp  thx_static_assert.hpp  thx_traits.hpp  thx_types.hpp  thx_utils.hpp  thx_vec.hpp  thx_vec_algo.hpp  thx_vec_operators.hpp  thx_vec_traits.hpp  thx_vec_utils.hpp
sandbox/: CMakeLists.txt  sandbox.vcxproj  sandbox.vcxproj.filters  thx_static_assert.hpp
sublime/: .gitignore  thx.sublime-project
test/: CMakeLists.txt  main.cpp  test.vcproj  test.vcxproj
test/src/: main.cpp
