PROJECT(test)
#ENABLE_TESTING()
INCLUDE_DIRECTORIES($ENV{THX_PATH}/include)
SET(test_SRCS main.cpp)
SOURCE_GROUP("Source Files" FILES test_SRCS)

#
# Set the C/C++ compiler flags
#
ADD_DEFINITIONS(/wd4820 /wd4626 /MP /EHa)
SET (CMAKE_CXX_FLAGS_DEBUG "/DDEBUG /MDd /Zi /Od")
SET (CMAKE_CXX_FLAGS_RELEASE "/DRELEASE /MD /O2")
SET (CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG")

ADD_EXECUTABLE(test ${test_SRCS})
INSTALL(TARGETS test DESTINATION bin/)

#ADD_TEST(NAME test COMMAND test)
