PROJECT(test)
#ENABLE_TESTING()
INCLUDE_DIRECTORIES(${THX_INCLUDE_PATH}
                    ${GTEST_INCLUDE_PATH})
LINK_DIRECTORIES(${GTEST_LIB_PATH})
SET(test_SRCS main.cpp)
SOURCE_GROUP("Source Files" FILES test_SRCS)

#
# Set the C/C++ compiler flags
#
ADD_DEFINITIONS(/wd4820 /wd4626 /MP /EHa)
SET (CMAKE_CXX_FLAGS_DEBUG "/DDEBUG /MTd /Zi /Od")
SET (CMAKE_CXX_FLAGS_RELEASE "/DRELEASE /MD /O2")
SET (CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} /LTCG")

ADD_EXECUTABLE(test ${test_SRCS})
TARGET_LINK_LIBRARIES(test gtestd gtest_maind)
INSTALL(TARGETS test DESTINATION bin/)

#ADD_TEST(NAME test COMMAND test)
